2004-03-12  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* src/areafix/areafix.c: fix cmd_listall finding
	    dupe lines in lists (thanks to Anton Leer)
	* TODO.rus: update

2004-03-04  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* src/common/msgid.c: fix trap ftn2rfc if bad
	    REPLY and use dbc_history

2004-02-26  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* src/common/histdb.c: fix writing fido_msgid
	* src/gate/ftn2rfc.c: remove '(', ')' in header
	    X-Comment-To(see Changes)
	* src/common/packet.c: add FIX_BAD_PKT_YEAR

2004-02-25  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* src/common/packet.c: fix the processing of the bad
	    packets
	* src/areafix/ftnafutil.c: fix the problem with removing
	    of nodes during unsubscribe

2004-02-22  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* src/common/msgid.c: not write mail to msgid
	    history
	* src/all: rename OLD_TMP to OLD_TOSS, fix warnings

2004-02-19  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* all: fix Makefiles

2004-02-17  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* src/gate/ftn2rfc.c: fix area-flag
	* src/common/msgid.c: fix DBC_HISTORY

2004-02-12  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* src/common/node.c: fix the problem with dupes of
	    the addresses in (F)Areas.bbs

2004-02-11  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* src/tick/ftntick.c: fix the AutoCreateFileechoLine
	    problem
	* src/areafix/areafix.c: fix the problem of similar
	    path to autocreate fechos in FAreas.bbs

2004-02-09  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* packages/freebsd: update
	* doc/README.ru: update

2004-02-05  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* src/areafix/areafix.c: fix support gcc<3.0
	* src/gate/rfc2ftn.c: fix disable FIDO_STYLE_MSGID
	    (thanks to Andrew Porohin)

2004-02-02  Andrey Slusar <rusfidogate@users.sourceforge.net>

	* acconfig.h: change rfc_lvl_1