@@ -1,21 +1,22 @@
 # New ports collection makefile for: fidogateds
 # Whom:                 Andrey Slusar <vasallia@ukr.net>
-# Date created:         29 Aug 2003
+# Date created:         9 Feb 2004
 # $FreeBSD$
 #
 
-PORTNAME=		fidogate
+PORTNAME=		fidogateds
 PORTVERSION=		5.1.0
-CATEGORIES=		news mail
+CATEGORIES=		russian news mail
 MASTER_SITES=		${MASTER_SITE_SOURCEFORGE}
+MASTER_SITE_SUBDIR=	rusfidogate
 DISTNAME=		fidogate5.1.0ds
 
-MAINTAINER=		rusfidogate@users.sourceforge.net
+MAINTAINER=		vasallia@ukr.net
 COMMENT=		Fido-Internet Gateway and Tosser
 
-# you may commet out this line if you have another newsserver or
-# no use newsserver
-RUN_DEPENDS=    ${LOCALBASE}/news/innconfval:${PORTSDIR}/news/inn
+.if !defined(WITHOUT_INN)
+RUN_DEPENDS=		${LOCALBASE}/news/bin/innconfval:${PORTSDIR}/news/inn
+.endif
 
 USE_BZIP2=		yes
 GNU_CONFIGURE=		yes
@@ -36,6 +37,9 @@ PLIST_SUB+=		SPOOLDIR=${SPOOLDIR} \
 			PREFIX=${PREFIX}
 
 HAS_CONFIGURE=		yes
+.if !defined(WITHOUT_INN)
+CONFIGURE_ARGS+=	--without-news
+.endif
 .if !defined(WITH_BSO)
 CONFIGURE_ARGS+=	--enable-amiga-out
 .endif
@@ -69,51 +73,33 @@ CONFIGURE_ARGS+=	--libexec=${PREFIX}/libexec/fidogate \
 			--with-spooldir=${SPOOLDIR} \
 			--with-btbasedir=${BTBASEDIR}
 
+EXTRA_DOCS=	doc/README.ru doc/README doc/FAQ.ru ChangeLog Changes.ru \
+		doc/old/FAQ_fidogate doc/old/FIDOGATE_ftrack doc/old/README.snp \
+		doc/old/README.snp.en doc/old/fidogate.txt doc/old/fidogate.texi \
+		doc/old/msgid.doc
+
 .include <bsd.port.pre.mk>
 
-post-install:
-
 .if !defined(NOPORTDOCS)
-	${MKDIR} ${PREFIX}/share/doc/fidogateds/old
-	${INSTALL_DATA} ${WRKSRC}/doc/README.ru ${PREFIX}/share/doc/fidogateds/README.ru
-	${INSTALL_DATA} ${WRKSRC}/doc/README ${PREFIX}/share/doc/fidogateds/README
-	${INSTALL_DATA} ${WRKSRC}/doc/FAQ.ru ${PREFIX}/share/doc/fidogateds/FAQ.ru
-	${INSTALL_DATA} ${WRKSRC}/ChangeLog ${PREFIX}/share/doc/fidogateds/ChangeLog
-	${MKDIR} ${PREFIX}/share/examples/fidogateds/mailer/postfix
-	${INSTALL_DATA} ${WRKSRC}/doc/mailer/postfix/master.cf ${PREFIX}/share/examples/fidogateds/mailer/postfix/master.cf
-	${INSTALL_DATA} ${WRKSRC}/doc/mailer/postfix/transport ${PREFIX}/share/examples/fidogateds/mailer/postfix/transport
-	${MKDIR} ${PREFIX}/share/examples/fidogateds/mailer/sendmail
-	${INSTALL_DATA} ${WRKSRC}/doc/mailer/sendmail/README.FIDOGATE ${PREFIX}/share/examples/fidogateds/mailer/sendmail/README.FIDOGATE
-	${INSTALL_DATA} ${WRKSRC}/doc/mailer/sendmail/mkclean ${PREFIX}/share/examples/fidogateds/mailer/sendmail/mkclean
-	${INSTALL_DATA} ${WRKSRC}/doc/mailer/sendmail/mklinks ${PREFIX}/share/examples/fidogateds/mailer/sendmail/mklinks
-	${MKDIR} ${PREFIX}/share/examples/fidogateds/mailer/sendmail/mailer
-	${INSTALL_DATA} ${WRKSRC}/doc/mailer/sendmail/mailer/ftn.m4  ${PREFIX}/share/examples/fidogateds/mailer/sendmail/mailer/ftn.m4
-	${INSTALL_DATA} ${WRKSRC}/doc/old/FAQ_fidogate ${PREFIX}/share/doc/fidogateds/old/FAQ_fidogate
-	${INSTALL_DATA} ${WRKSRC}/doc/old/FIDOGATE_ftrack ${PREFIX}/share/doc/fidogateds/old/FIDOGATE_ftrack
-	${MKDIR} ${PREFIX}/share/examples/fidogateds/dyff
-	${INSTALL_DATA} ${WRKSRC}/doc/examples/dyff/acl.sample ${PREFIX}/share/examples/fidogateds/dyff/acl.sample
-	${INSTALL_DATA} ${WRKSRC}/doc/examples/dyff/aliases.sample ${PREFIX}/share/examples/fidogateds/dyff/aliases.sample
-	${INSTALL_DATA} ${WRKSRC}/doc/examples/dyff/areafix.help.rus ${PREFIX}/share/examples/fidogateds/dyff/areafix.help.rus
-	${INSTALL_DATA} ${WRKSRC}/doc/examples/dyff/areafix.help.sample ${PREFIX}/share/examples/fidogateds/dyff/areafix.help.sample
-	${INSTALL_DATA} ${WRKSRC}/doc/examples/dyff/areas.bbs.sample ${PREFIX}/share/examples/fidogateds/dyff/areas.bbs.sample
-	${INSTALL_DATA} ${WRKSRC}/doc/examples/dyff/areas.sample ${PREFIX}/share/examples/fidogateds/dyff/areas.sample
-	${INSTALL_DATA} ${WRKSRC}/doc/examples/dyff/fareas.bbs.sample ${PREFIX}/share/examples/fidogateds/dyff/fareas.bbs.sample
-	${INSTALL_DATA} ${WRKSRC}/doc/examples/dyff/fidogate.conf.sample ${PREFIX}/share/examples/fidogateds/dyff/fidogate.conf.sample
-	${INSTALL_DATA} ${WRKSRC}/doc/examples/dyff/fidokill.sample ${PREFIX}/share/examples/fidogateds/dyff/fidokill.sample
-	${INSTALL_DATA} ${WRKSRC}/doc/examples/dyff/ftnacl.sample ${PREFIX}/share/examples/fidogateds/dyff/ftnacl.sample
-	${INSTALL_DATA} ${WRKSRC}/doc/examples/dyff/hosts.sample ${PREFIX}/share/examples/fidogateds/dyff/hosts.sample
-	${INSTALL_DATA} ${WRKSRC}/doc/examples/dyff/packing.sample ${PREFIX}/share/examples/fidogateds/dyff/packing.sample
-	${INSTALL_DATA} ${WRKSRC}/doc/examples/dyff/passwd.sample ${PREFIX}/share/examples/fidogateds/dyff/passwd.sample
-	${INSTALL_DATA} ${WRKSRC}/doc/examples/dyff/routing.sample ${PREFIX}/share/examples/fidogateds/dyff/routing.sample
-	${INSTALL_DATA} ${WRKSRC}/doc/examples/dyff/spyes.sample ${PREFIX}/share/examples/fidogateds/dyff/spyes.sample
-	${INSTALL_DATA} ${WRKSRC}/doc/examples/dyff/uplinks.sample ${PREFIX}/share/examples/fidogateds/dyff/uplinks.sample
-	${MKDIR} ${PREFIX}/share/examples/fidogateds/point
-	${INSTALL_DATA} ${WRKSRC}/doc/examples/point/areas ${PREFIX}/share/examples/fidogateds/point/areas
-	${INSTALL_DATA} ${WRKSRC}/doc/examples/point/areas.bbs ${PREFIX}/share/examples/fidogateds/point/areas.bbs
-	${INSTALL_DATA} ${WRKSRC}/doc/examples/point/fidogate.conf ${PREFIX}/share/examples/fidogateds/point/fidogate.conf
-	${INSTALL_DATA} ${WRKSRC}/doc/examples/point/newsfeeds ${PREFIX}/share/examples/fidogateds/point/newsfeeds
-	${INSTALL_DATA} ${WRKSRC}/doc/examples/point/packing ${PREFIX}/share/examples/fidogateds/point/packing
-	${INSTALL_DATA} ${WRKSRC}/doc/examples/point/routing ${PREFIX}/share/examples/fidogateds/point/routing
+post-install:
+	${MKDIR} ${DOCSDIR}
+.for a in ${EXTRA_DOCS}
+	${INSTALL_DATA}	${WRKSRC}/${a} ${DOCSDIR}
+.endfor
+	${MKDIR} ${EXAMPLESDIR}
+.for a in point inn postfix sendmail
+	${MKDIR} ${EXAMPLESDIR}/${a}
+.endfor
+	${INSTALL_DATA} ${WRKSRC}/doc/examples/point/areas ${EXAMPLESDIR}/point/areas
+	${INSTALL_DATA} ${WRKSRC}/doc/examples/point/areas.bbs ${EXAMPLESDIR}/point/areas.bbs
+	${INSTALL_DATA} ${WRKSRC}/doc/examples/point/fidogate.conf ${EXAMPLESDIR}/point/fidogate.conf
+	${INSTALL_DATA} ${WRKSRC}/doc/examples/point/newsfeeds ${EXAMPLESDIR}/point/newsfeeds
+	${INSTALL_DATA} ${WRKSRC}/doc/examples/point/packing ${EXAMPLESDIR}/point/packing
+	${INSTALL_DATA} ${WRKSRC}/doc/examples/point/routing ${EXAMPLESDIR}/point/routing
+	${INSTALL_DATA} ${WRKSRC}/doc/news/inn/newsfeeds.fidogate ${EXAMPLESDIR}/inn/newsfeeds.fidogate
+	${INSTALL_DATA}	${WRKSRC}/doc/mailer/postfix/master.cf ${EXAMPLESDIR}/postfix/master.cf
+	${INSTALL_DATA} ${WRKSRC}/doc/mailer/postfix/transport ${EXAMPLESDIR}/postfix/transport
+	${INSTALL_DATA} ${WRKSRC}/doc/mailer/sendmail/mailer/ftn.m4 ${EXAMPLESDIR}/sendmail/ftn.m4
 .endif
 
 .include <bsd.port.post.mk>
