@@ -77,49 +77,34 @@ libexec/fidogate/rfc2ftn
 libexec/fidogate/send-fidogate
 var/fidogate/areas.bbs.sample
 var/fidogate/fareas.bbs.sample
-%%PORTDOCS%%share/doc/fidogateds/README.ru
-%%PORTDOCS%%share/doc/fidogateds/FAQ.ru
-%%PORTDOCS%%share/doc/fidogateds/README
-%%PORTDOCS%%share/doc/fidogateds/ChangeLog
-%%PORTDOCS%%share/doc/fidogateds/old/FAQ_fidogate
-%%PORTDOCS%%share/doc/fidogateds/old/FIDOGATE_ftrack
-%%PORTDOCS%%share/examples/fidogateds/dyff/acl.sample
-%%PORTDOCS%%share/examples/fidogateds/dyff/aliases.sample
-%%PORTDOCS%%share/examples/fidogateds/dyff/areafix.help.rus
-%%PORTDOCS%%share/examples/fidogateds/dyff/areafix.help.sample
-%%PORTDOCS%%share/examples/fidogateds/dyff/areas.bbs.sample
-%%PORTDOCS%%share/examples/fidogateds/dyff/areas.sample
-%%PORTDOCS%%share/examples/fidogateds/dyff/fareas.bbs.sample
-%%PORTDOCS%%share/examples/fidogateds/dyff/fidogate.conf.sample
-%%PORTDOCS%%share/examples/fidogateds/dyff/fidokill.sample
-%%PORTDOCS%%share/examples/fidogateds/dyff/ftnacl.sample
-%%PORTDOCS%%share/examples/fidogateds/dyff/hosts.sample
-%%PORTDOCS%%share/examples/fidogateds/dyff/packing.sample
-%%PORTDOCS%%share/examples/fidogateds/dyff/passwd.sample
-%%PORTDOCS%%share/examples/fidogateds/dyff/routing.sample
-%%PORTDOCS%%share/examples/fidogateds/dyff/spyes.sample
-%%PORTDOCS%%share/examples/fidogateds/dyff/uplinks.sample
-%%PORTDOCS%%share/examples/fidogateds/point/areas
-%%PORTDOCS%%share/examples/fidogateds/point/areas.bbs
-%%PORTDOCS%%share/examples/fidogateds/point/fidogate.conf
-%%PORTDOCS%%share/examples/fidogateds/point/newsfeeds
-%%PORTDOCS%%share/examples/fidogateds/point/packing
-%%PORTDOCS%%share/examples/fidogateds/point/routing
-%%PORTDOCS%%share/examples/fidogateds/mailer/sendmail/README.FIDOGATE
-%%PORTDOCS%%share/examples/fidogateds/mailer/sendmail/mkclean
-%%PORTDOCS%%share/examples/fidogateds/mailer/sendmail/mklinks
-%%PORTDOCS%%share/examples/fidogateds/mailer/sendmail/mailer/ftn.m4
-%%PORTDOCS%%share/examples/fidogateds/mailer/postfix/master.cf
-%%PORTDOCS%%share/examples/fidogateds/mailer/postfix/transport
-%%PORTDOCS%%@dirrm share/examples/fidogateds/mailer/sendmail/mailer
-%%PORTDOCS%%@dirrm share/examples/fidogateds/mailer/sendmail
-%%PORTDOCS%%@dirrm share/examples/fidogateds/mailer/postfix
-%%PORTDOCS%%@dirrm share/examples/fidogateds/mailer
-%%PORTDOCS%%@dirrm share/examples/fidogateds/dyff
-%%PORTDOCS%%@dirrm share/examples/fidogateds/point
-%%PORTDOCS%%@dirrm share/examples/fidogateds
-%%PORTDOCS%%@dirrm share/doc/fidogateds/old
-%%PORTDOCS%%@dirrm share/doc/fidogateds
+%%DOCSDIR%%/README.ru
+%%DOCSDIR%%/FAQ.ru
+%%DOCSDIR%%/README
+%%DOCSDIR%%/Changes.ru
+%%DOCSDIR%%/ChangeLog
+%%DOCSDIR%%/FAQ_fidogate
+%%DOCSDIR%%/FIDOGATE_ftrack
+%%DOCSDIR%%/README.snp
+%%DOCSDIR%%/README.snp.en
+%%DOCSDIR%%/fidogate.txt
+%%DOCSDIR%%/fidogate.texi
+%%DOCSDIR%%/msgid.doc
+%%EXAMPLESDIR%%/point/areas
+%%EXAMPLESDIR%%/point/areas.bbs
+%%EXAMPLESDIR%%/point/fidogate.conf
+%%EXAMPLESDIR%%/point/newsfeeds
+%%EXAMPLESDIR%%/point/packing
+%%EXAMPLESDIR%%/point/routing
+%%EXAMPLESDIR%%/postfix/master.cf
+%%EXAMPLESDIR%%/postfix/transport
+%%EXAMPLESDIR%%/sendmail/ftn.m4
+%%EXAMPLESDIR%%/inn/newsfeeds.fidogate
+@dirrm %%EXAMPLESDIR%%/point
+@dirrm %%EXAMPLESDIR%%/postfix
+@dirrm %%EXAMPLESDIR%%/sendmail
+@dirrm %%EXAMPLESDIR%%/inn
+@dirrm %%EXAMPLESDIR%%
+@dirrm %%DOCSDIR%%
 @dirrm var/fidogate/seq
 @dirrm var/fidogate
 @dirrm etc/fido/gate
