@@ -2,7 +2,7 @@
 /*****************************************************************************
  * FIDOGATE --- Gateway UNIX Mail/News <-> FTN NetMail/EchoMail
  *
- * $Id: areafix.c,v 1.10 2004/03/15 01:16:36 rusfidogate Exp $
+ * $Id: areafix.c,v 1.11 2004/03/19 19:57:04 rusfidogate Exp $
  *
  * Common Areafix functions
  *
@@ -1262,11 +1262,11 @@ int cmd_listall(Node *node)
 		    {
 			if(!*buf)
 			    continue;
-			f2 = xstrtok(str_upper(buf),  " \t");
+			f2 = xstrtok(buf,  " \t");
 			f1 = xstrtok(NULL,  "\n");
 
 			find = FALSE;
-			if(hi_test(f2))
+			if(hi_test(str_upper(f2)))
 			    find = TRUE;
 
 			if(!find)
