@@ -1,3 +1,7 @@
+2004-03-16  Andrey Slusar <rusfidogate@users.sourceforge.net>
+
+	* packages/freebsd: update
+
 2004-03-12  Andrey Slusar <rusfidogate@users.sourceforge.net>
 
 	* src/areafix/areafix.c: fix cmd_listall finding
